# pytemplate

./: .gitignore  README.md  pyproject.toml
source/pytemplate/: main.py
src/pytemplate/: main.py
