[tool.poetry]
name = "pytemplate"
version = "0.1.0"
description = "Python Project Template"
authors = ["ueduck8x <hrt.ueda0809@gmail.com>"]
maintainers = ["ueduck8x <hrt.ueda0809@gmail.com>"]
readme = "README.md"
# packages = [{ include = "pytemplate", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.2"
pyproject-flake8 = "^6.1"
flake8-bugbear = "^24.2"
mypy = "^1.9"
isort = "^5.13"
# pre-commit = "*"
# pytest = "*"

# [tool.poetry.scripts]
# pytemplate = "pytemplate.main:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

# Following configuration are added manually

[tool.flake8]
max-line-length = 119
max-complexity = 10
select = "C,E,F,W,B"
ignore = "E203"

[tool.black]
line-length = 119
exclude = '''(migrations | .mypy_cache | .pytest_cache | .tox | .venv | dist)'''

[tool.mypy]
python_version = "3.12"
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.isort]
profile = "black"
line_length = 119
